--- a/style.css
+++ b/style.css
@@ -53,6 +53,17 @@ a:hover {
   width: 33.33333333%;
 }
 
+.search input {
+width:80%;
+margin-left: 15px;
+margin-top:.5rem;
+margin-bottom:.5rem;
+font-size: 0.9rem;
+padding: 0.5rem;
+border-radius: 1rem;
+border: 1px solid #eeeeee;
+}
+
 .project h3 {
   margin-left: 20px;
   margin-right: 35px;
@@ -61,6 +72,11 @@ a:hover {
   border-radius: 10px;
   display: flex;
   justify-content: space-between
+}
+
+.project p {
+  margin-left: 25px;
+  margin-right: 35px;
 }
 
 #projects {
@@ -74,11 +90,6 @@ a:hover {
   padding: 10px;
   background-color: #f9f9f9;
   border-radius: 10px;
-}
-
-#projects p {
-  margin-left: 25px;
-  margin-right: 35px;
 }
 
 #projects a{
