--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ border: 1px solid #eeeeee;
 #self-summary{
   margin: 40px 20px 20px 20px;
   padding-left: 20px;
+  padding-right: 10px;
   padding-top: 1px;
   padding-bottom: 1px;
   background-color: #f1f1f1;
