--- a/style.css
+++ b/style.css
@@ -80,6 +80,53 @@ border: 1px solid #eeeeee;
   margin-right: 35px;
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.about h1{
+  text-align: center;
+  line-height: 1;
+}
+
+.about h3 {
+  text-align: center;
+  line-height: 0.9;
+  margin-top: 5px;
+  margin-left: 15px;
+  margin-bottom: 15px;
+}
+
+.about p{
+  font-weight: 500;
+  line-height: 1.1;
+  margin-left: 20px;
+  padding-bottom: 1px;
+  display: block;
+}
+
+.about img {
+    margin-top: 20px;
+    width: 200px;
+    height: 200px; 
+    border-radius: 20%; 
+}
+
+.about p img {
+  margin: 0;
+  width: 15px;
+  height: 15px;
+}
+
+#education h3 {
+  text-align: center;
+  margin-left: 0px;
+  margin-bottom: 0px;
+}
+
 #projects h2 {
   margin-left: 15px;
   margin-right: 15px;
@@ -96,47 +143,6 @@ border: 1px solid #eeeeee;
 
 #projects a{
   margin-left: 65px;
-}
-
-#about {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-#about h1{
-  text-align: center;
-  line-height: 1;
-}
-
-#about h3 {
-  text-align: center;
-  line-height: 0.9;
-  margin-top: 5px;
-  margin-left: 15px;
-  margin-bottom: 15px;
-}
-
-#about p{
-  font-weight: 500;
-  line-height: 1.1;
-  margin-left: 20px;
-  padding-bottom: 1px;
-  display: block;
-}
-
-#about img {
-    margin-top: 20px;
-    width: 200px;
-    height: 200px; 
-    border-radius: 20%; 
-}
-
-#about p img {
-  margin: 0;
-  width: 15px;
-  height: 15px;
 }
 
 #self-summary{
@@ -204,9 +210,14 @@ border: 1px solid #eeeeee;
     align-items: start
   }
 
-  #about {
+  .about {
     grid-row-start: 1;
     grid-row-end: 3;
+  }
+  
+  .project {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
   }
 
   #news {
@@ -223,10 +234,5 @@ border: 1px solid #eeeeee;
     grid-column: 2;
     grid-row-start: 2;
     grid-row-end: 6;
-  }
-  
-  .project {
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
   }
 }
